
2011-09-10
- po/ru.po: Added missing strings. Contributed by Dima Sobolev. (VRI)
- bios/keyb_it.h, po/it.po: Added Italian translation. Contributed by Lodovico
  Zanier. (VRI)
- bdos/fsfat.c: Fixes bug: the last two clusters on a drive could not be
  allocated. Submitted by Roger Burrows. (VRI)
- bios/biosmem.c, bios/blkdev.c, bios/blkdev.h, bios/chardev.c, bios/clock.c,
  bios/ikbd.c, bios/kprint.c, bios/mfp.c, bios/midi.c, bios/mouse.c: Remove
  unnecessary includes for bios.h in files in the bios subdirectory. Submitted
  by Roger Burrows. (VRI)
- bios/bios.c, bios/biosmem.h, include/pd.h: Create centralized pd.h to define
  the Process Descriptor, and update files in the bios directory to use it
  where appropriate. The bios/bios.h file is removed. Submitted by Roger
  Burrows. (VRI)
- po/de.po: Added missing German translations. (THH)
- bios/atari_rootsec.h: Removed the __packed__ attribute on the rootsector
  structure. This is useless in the current m68k-atari-mint GCC because the
  maximal alignment is 2 bytes. And most of all it forces all accesses to word
  and long members with move.b on 68000 to avoid potential address errors,
  causing bad performance. Suggested by Eero Tammien. (VRI)
- bios/disk.c: Fixed sect and sect2 with an union to avoid alignment suspicion
  and inefficient access to short and long members on 68000. (VRI)
- aes/gemdosif.S, aes/gemstart.S, bios/aciavecs.S, bios/country.c,
  bios/contry.h, bios/font.h, bios/fnt_*.c, bios/ikbd.c, bios/ikbd.h,
  bios/keyb_*.h, cli/coma.S, tools/bug.c, util/langs.h, utils/nls.c: Added more
  constness. (VRI)
- bios/bios.c bios/machine.c bios/natfeat.S bios/natfeats.c bios/xhdi.c
  include/config.h: Disable Native Features for TOS 1.xx / 192kB ROMs (THH)
- bios/machine.c bios/natfeat.S bios/xhdi.c include/config.h: Added another
  compile-time switch to disable XHDI on TOS 1.xx to save some more space (THH)
- bios/memory.S: Disable Falcon memory controller support for TOS 1.xx (THH)