@@ -72,8 +72,10 @@ static void detect_video(void)
 
   /* test if we have Falcon VIDEL by testing for f030_xreg */
   has_videl = 0;
+#if CONF_WITH_FALCON
   if (check_read_byte(0xffff8282))
     has_videl = 1;
+#endif
 }
 
 /* vme */
